# VisionStudy

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Eg01_ChessboardDetection/: CMakeLists.txt  ChessBoardDetector.hpp  main.cpp
Eg01_QrCodeDecode/: CMakeLists.txt  main.cpp
Eg02_AprilTagDetection/: CMakeLists.txt
Eg02_AprilTagDetection/apriltag/: CMakeLists.txt
Eg02_AprilTagDetection/apriltag/include/apriltag/: Edge.h  FloatImage.h  GLine2D.h  Gaussian.h  MathUtil.h  Segment.h  Tag16h5_other.h  Tag25h7.h  Tag25h9.h  Tag36h11.h  TagDetection.h  TagDetector.h  UnionFindSimple.h
Eg02_AprilTagDetection/apriltag/src/: Gaussian.cc  GrayModel.cc  Homography33.cc  MathUtil.cc  Quad.cc  Segment.cc  UnionFindSimple.cc
Eg02_QrCodeDecode/: CMakeLists.txt
Eg03_AprilTagDetection/: CMakeLists.txt  main.cpp
Eg03_VisualDebugging/: CMakeLists.txt
Eg04_VisualDebugging/: CMakeLists.txt  main.cpp
cmake/: FindZBar.cmake
common/: DebugCommon.hpp  common.hpp
